removed live-server settings and related entries

--- a/app-typescript/index.html
+++ b/app-typescript/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p>Hello Learner!</p>
-    <p>Using lite-server dependency</p>
+    <p>To use lite-server dependency run command "npm install --save-dev lite-server" followed by updating package.json with "start": "lite-server"</p>
+    <p>npm start needs to be called everytime you want to use this dependency for auto compilation</p>
 </body>
 </html>
