--- a/app-typescript/index.html
+++ b/app-typescript/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Understanding TS</title>
-    <script src="app.js" defer></script>
+    <script src="build/app.js" defer></script>
+    <script src="build/analytics.js" defer></script>
 </head>
 <body>
     <p>Hello Learner!</p>
