--- a/app-typescript/mypage.html
+++ b/app-typescript/mypage.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8" />
         <title>Understanding and Learning</title>
         <!-- <script src="demo.js" defer></script> -->
-        <script src="mydemo.js" defer></script>
+        <script src="build/mydemo.js" defer></script>
     </head>
     <body>
         <input type="number" id="num1" placeholder="Number 1" />
